--- a/client/src/card.css
+++ b/client/src/card.css
@@ -1,88 +1,150 @@
-.wrapper{margin:10vh;
-
-
+.cards {
+  width: calc(100% - 2em);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 1em;
+  grid-template-areas: "a a b c" "a a d d";
+  width: 80%;
 }
 
-
-.card{
-  border-radius: 2px;
-  border: none;
-  padding: 30px;
-  transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
- overflow:hidden;
- min-width:370px;
-  background-size:120%;
- min-height:450px;
-
-   box-shadow: 0 0 12px 0 rgba(0,0,0,0.2);}
-
- @media (max-width: 768px) {
-  .card{min-width:350px;}
+.card {
+  width: 100%;
+  position: relative;
+  transition: all 0.25s ease;
+  cursor: pointer;
+  font-family: "Baloo 2", sans-serif;
+  font-weight: 300;
 }
-
-@media (max-width: 420px) {
-  .card{min-height:350px;
- }
+.card:last-child {
+  margin-bottom: 0;
 }
-
- .card-has-bg{
- transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-  background-size:120%;
-  background-repeat:no-repeat;
-  background-position: center center;
+.card:before {
+  height: 0;
+  content: "";
+  display: block;
+  padding-bottom: 47.36%;
 }
-  .card-has-bg:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: inherit;
-    -webkit-filter: grayscale(1);
-  -moz-filter: grayscale(100%);
-  -ms-filter: grayscale(100%);
-  -o-filter: grayscale(100%);
-  filter: grayscale(100%);}
-
-  .card-has-bg:hover {
-    transform: scale(0.98);
-     box-shadow: 0 0 5px -2px rgba(0,0,0,0.3);
-    background-size:130%;
-     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);}
-
-    .card-img-overlay {
-      transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-      background: rgb(35,79,109);
-     background: linear-gradient(0deg, rgba(4,69,114,0.5) 0%, rgba(4,69,114,1) 100%);
-     }
+.card.content:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  content: "";
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), black);
+}
+.card:nth-child(1) {
+  grid-area: a;
+}
+.card:nth-child(2) {
+  grid-area: b;
+}
+.card:nth-child(3) {
+  grid-area: c;
+}
+.card:nth-child(4) {
+  grid-area: d;
+}
+.card-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.card-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.card-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.card-label {
+  position: absolute;
+  top: 0.45rem;
+  left: 0.45rem;
+  background: #089f8a;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 0.7em;
+  color: white;
+  padding: 0.5em;
+}
+.card-title {
+  position: absolute;
+  left: 1em;
+  bottom: 1em;
+  color: #d6dbeb;
+  z-index: 5;
+  font-size: 0.8em;
+}
+.card.form {
+  position: relative;
+}
+.card.form:before {
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+}
+.card.form:after {
+  position: absolute;
+  top: 0.5em;
+  left: 0.5em;
+  width: calc(100% - 1em);
+  height: calc(100% - 1em);
+  content: "";
+  background: #252833;
+}
+.card.form .form-title {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  font-size: 7vw;
+  font-weight: 900;
+  z-index: 5;
+  text-transform: uppercase;
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  -webkit-text-fill-color: transparent;
+  background-clip: border-box;
+  -webkit-background-clip: text;
+}
+.card.form .form-title:before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  content: "Sign Up";
+  opacity: 0.5;
+  filter: blur(10px);
+  transition: all 0.25s ease;
+  z-index: 2;
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  -webkit-text-fill-color: transparent;
+  background-clip: border-box;
+  -webkit-background-clip: text;
+  transform: translateX(-50%) translateY(-50%);
+}
+.card:nth-child(2) .card-label {
+  background: #ff016d;
   
-.card-footer{
-  background: none;
-   border-top: none;}
-
-
- .card-meta{color:#f2f900}
-
- .card-body{ 
-   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
 }
- .card-body:hover {
-   
-     margin-top:30px;
-     transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-   
- cursor: pointer;
- transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+.card:nth-child(3) .card-label {
+  background: #00ecfd;
+  color:#252833
 }
-
-.card-img-overlay {
-  transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
- background: rgb(35,79,109);
-background: linear-gradient(0deg, rgba(35,79,109,0.3785889355742297) 0%, rgba(69,95,113,1) 100%);
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.35);
 }
-
-.why{background-color: black;
+.card:hover .form-title:before {
+  filter: blur(3px);
+  opacity: 0.7;
 }
 
 .yes{
@@ -98,3 +160,8 @@ background: linear-gradient(0deg, rgba(35,79,109,0.3785889355742297) 0%, rgba(69
   font-size:10px;
 }
 
+.yan{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
