--- a/client/src/index.css
+++ b/client/src/index.css
@@ -181,9 +181,7 @@ dd{
 
 
 
-.drp{
- text-align: right;
-}
+
 
 .drp2{
   text-align: left;
@@ -322,4 +320,27 @@ dd{
   color: #00ffff;
   font-weight: bold;
   font-size: 25px;
+}
+
+
+.drp{
+  text-align: right;
+  font-size: 20px;
+  
+ }
+
+
+.drp2{
+  margin-left: -100px
+}
+
+.dropbtn{
+  font-size:20px;
+  color: black;
+}
+
+
+.dropbtn span{
+  color: black;
+  font-size: 20px;
 }
